// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Observer digital benefits stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEEndpointDF70D454": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
        "Stage": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "observer-digital-benefits-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "observer-digital-benefits-code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "SupporterProductDataTablequeryaccess7665F484": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Query",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::ImportValue": "supporter-product-data-tables-CODE-SupporterProductDataTable",
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/SupporterProductData-CODE/index/subscriptionName-index",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataTablequeryaccess7665F484",
        "Roles": [
          {
            "Ref": "observerdigitalbenefitslambdaServiceRole184268EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "observerdigitalbenefitslambdaFD43C7C9": {
      "DependsOn": [
        "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16",
        "observerdigitalbenefitslambdaServiceRole184268EE",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/observer-digital-benefits/observer-digital-benefits.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "observer-digital-benefits",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "observer-digital-benefits-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaServiceRole184268EE",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "observerdigitalbenefitslambdaServiceRole184268EE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/observer-digital-benefits/observer-digital-benefits.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/observer-digital-benefits",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/observer-digital-benefits/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16",
        "Roles": [
          {
            "Ref": "observerdigitalbenefitslambdaServiceRole184268EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "observer-digital-benefits-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEANY139FEC55": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "observerdigitalbenefitslambdaFD43C7C9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEANYApiPermissionTestobserverdigitalbenefitsCODEobserverdigitalbenefitslambdaobserverdigitalbenefitsCODEF9094BA7ANYA48DE386": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEANYApiPermissionobserverdigitalbenefitsCODEobserverdigitalbenefitslambdaobserverdigitalbenefitsCODEF9094BA7ANYACE4E889": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
              },
              "/",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEAccount39F58E7E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsCODECloudWatchRole767EDA3E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODECloudWatchRole767EDA3E": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeployment760627567bc71d84578265f6abac18c2194b9ca5": {
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyANYD379DFAC",
        "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyF9553C39",
        "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEANY139FEC55",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7": {
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEAccount39F58E7E",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeployment760627567bc71d84578265f6abac18c2194b9ca5",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEUsagePlanCA3F70D9": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
            },
            "Stage": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for observer-digital-benefits",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "observer-digital-benefits-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEUsagePlanUsagePlanKeyResourceobserverdigitalbenefitsCODEobserverdigitalbenefitslambdaobserverdigitalbenefitsCODEobserverdigitalbenefitskeyCODEDDA3664BC382DB74": {
      "Properties": {
        "KeyId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEobserverdigitalbenefitskeyCODEDA1EA448",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEUsagePlanCA3F70D9",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEobserverdigitalbenefitskeyCODEDA1EA448": {
      "Properties": {
        "Enabled": true,
        "Name": "observer-digital-benefits-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
            },
            "StageName": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyANYApiPermissionTestobserverdigitalbenefitsCODEobserverdigitalbenefitslambdaobserverdigitalbenefitsCODEF9094BA7ANYproxy746FD151": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyANYApiPermissionobserverdigitalbenefitsCODEobserverdigitalbenefitslambdaobserverdigitalbenefitsCODEF9094BA7ANYproxy142E1E63": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
              },
              "/",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEDeploymentStageCODE875A82C7",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyANYD379DFAC": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "observerdigitalbenefitslambdaFD43C7C9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyF9553C39",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsCODEproxyF9553C39": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsCODE18E5AD33",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The Observer digital benefits stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODEndpointB0B4F52F": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "observer-digital-benefits returned a 5XX response. Search the logs below for "error" for more information. Impact: an eligible user may not have been offered a discount during the cancellation flow",
        "AlarmName": "observer-digital-benefits-PROD 5XX errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "observer-digital-benefits-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "observerdigitalbenefitslambdaFD43C7C9",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
        "Stage": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "observer-digital-benefits.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "observer-digital-benefits.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "SupporterProductDataTablequeryaccess7665F484": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Query",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::ImportValue": "supporter-product-data-tables-PROD-SupporterProductDataTable",
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/SupporterProductData-PROD/index/subscriptionName-index",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SupporterProductDataTablequeryaccess7665F484",
        "Roles": [
          {
            "Ref": "observerdigitalbenefitslambdaServiceRole184268EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "observerdigitalbenefitslambdaFD43C7C9": {
      "DependsOn": [
        "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16",
        "observerdigitalbenefitslambdaServiceRole184268EE",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/observer-digital-benefits/observer-digital-benefits.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "observer-digital-benefits",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "observer-digital-benefits-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaServiceRole184268EE",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "observerdigitalbenefitslambdaServiceRole184268EE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/observer-digital-benefits/observer-digital-benefits.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/observer-digital-benefits",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/observer-digital-benefits/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "observerdigitalbenefitslambdaServiceRoleDefaultPolicy3A2D2C16",
        "Roles": [
          {
            "Ref": "observerdigitalbenefitslambdaServiceRole184268EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODANY206BDEFD": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "observerdigitalbenefitslambdaFD43C7C9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODANYApiPermissionTestobserverdigitalbenefitsPRODobserverdigitalbenefitslambdaobserverdigitalbenefitsPROD19E4B2C2ANY6523DEB0": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODANYApiPermissionobserverdigitalbenefitsPRODobserverdigitalbenefitslambdaobserverdigitalbenefitsPROD19E4B2C2ANY7B244323": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
              },
              "/",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODAccount5085075E": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODCloudWatchRoleDB786F96",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODCloudWatchRoleDB786F96": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentB3E63E2248dac15827bcba0bc40d15dbdd023867": {
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxyANYA79F9B8D",
        "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxy760F363F",
        "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODANY206BDEFD",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF": {
      "DependsOn": [
        "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODAccount5085075E",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentB3E63E2248dac15827bcba0bc40d15dbdd023867",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "observer-digital-benefits-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODUsagePlan7C5536AB": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
            },
            "Stage": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for observer-digital-benefits",
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "observer-digital-benefits-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODUsagePlanUsagePlanKeyResourceobserverdigitalbenefitsPRODobserverdigitalbenefitslambdaobserverdigitalbenefitsPRODobserverdigitalbenefitskeyPROD40E5B24CCA26983E": {
      "Properties": {
        "KeyId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODobserverdigitalbenefitskeyPRODABC61343",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODUsagePlan7C5536AB",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODobserverdigitalbenefitskeyPRODABC61343": {
      "Properties": {
        "Enabled": true,
        "Name": "observer-digital-benefits-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
            },
            "StageName": {
              "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "observer-digital-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxy760F363F": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxyANYA79F9B8D": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "observerdigitalbenefitslambdaFD43C7C9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxy760F363F",
        },
        "RestApiId": {
          "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxyANYApiPermissionTestobserverdigitalbenefitsPRODobserverdigitalbenefitslambdaobserverdigitalbenefitsPROD19E4B2C2ANYproxy53DDA930": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODproxyANYApiPermissionobserverdigitalbenefitsPRODobserverdigitalbenefitslambdaobserverdigitalbenefitsPROD19E4B2C2ANYproxy58A084A8": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "observerdigitalbenefitslambdaFD43C7C9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODE3B12D45",
              },
              "/",
              {
                "Ref": "observerdigitalbenefitslambdaobserverdigitalbenefitsPRODDeploymentStagePROD2B69E4CF",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
